crates/franken-engine/tests/snapshots/revocation_enforcement_integration__revocation_check_event_v1_wire.snap
---
source: tests/revocation_enforcement_integration.rs
expression: actual
---
{
  "schema_version": 1,
  "enforcement_point": "TokenAcceptance",
  "target_id": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1
  ],
  "target_type": "Token",
  "is_revoked": false,
  "transitive": false,
  "trace_id": "trace-wire-v1",
  "decision_id": "decision-wire-v1",
  "policy_id": "policy-wire-v1",
  "frontier_head_seq": 9,
  "frontier_chain_hash": "chain-hash-wire-v1",
  "revocation_id": null,
  "outcome": "cleared",
  "error_code": null,
  "checked_at": 4242
}
